# vue-django-app

./: LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/account/: serializers.py  urls.py  views.py
backend/app/: .env  settings.py  urls.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/components/inputs/: InputIcon.vue  InputMask.vue  InputMaskIcon.vue  InputPasswordIcon.vue
frontend/src/components/popup/: PopUp.vue
frontend/src/directives/mask/: dynamicMask.ts  index.ts  masker.ts  maskit.ts  tokens.ts
frontend/src/http/: index.ts
frontend/src/interfaces/: IAuth.ts  INotification.ts  IUser.ts
frontend/src/routes/: index.ts
frontend/src/stores/: auth.ts  notification.ts  user.ts
frontend/src/views/: HomeView.vue  LandingPageView.vue  LoginView.vue  LogoutView.vue  NotFoundView.vue  RegisterView.vue
